completed forgot password pages

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -27,7 +27,7 @@
     "react/jsx-filename-extension": [
       0,
       {
-        "extensions": [".js", ".jsx"]
+        "extensions": [".js", ".jsx", ".native.js"]
       }
     ],
     "import/prefer-default-export": 0,
